--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
     "core-js": "^3.19.2"
